remove `mold` from builder for more compat

--- a/Dockerfile_builder
+++ b/Dockerfile_builder
@@ -5,15 +5,12 @@ ENV DEBIAN_FRONTEND=noninteractive
 ENV CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_LINKER=x86_64-linux-gnu-gcc
 ENV CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc
 
-# not set via config for better compatibility and less questions
-ENV RUSTFLAGS="-C linker=clang -C link-arg=-fuse-ld=/usr/bin/mold"
-
 RUN <<EOF
 #!/bin/bash
 set -e
 
 apt-get update
-apt-get install -y build-essential clang gcc-aarch64-linux-gnu g++-aarch64-linux-gnu mold npm
+apt-get install -y build-essential clang gcc-aarch64-linux-gnu g++-aarch64-linux-gnu npm
 apt-get clean
 
 rustup target add aarch64-unknown-linux-gnu
