add MaxMind DB update cron job

--- a/config.toml
+++ b/config.toml
@@ -1424,6 +1424,18 @@ block_unknown = false
 # overwritten by: GEO_MAXMIND_DB_TYPE
 #maxind_db_type = 'GeoLite2-Country'
 
+# If you configured a `maxmind_account_id` + `maxmind_license_key`,
+# you can change the time when the DB update job runs. By default,
+# it runs every night at 05:00. It will check if y new version of
+# the MaxMind DB is available and if so, download it.
+#
+# Accepts cron syntax:
+# "sec min hour day_of_month month day_of_week year"
+#
+# default: "0 0 5 * * * *"
+# overwritten by: GEO_MAXMIND_UPDATE_CRON
+maxmind_update_cron = "0 0 5 * * * *"
+
 [hashing]
 # Argon2ID hashing parameters. Take a look at the documentation
 # for more information:
