fix some more things before migrating PAM module code

--- a/src/api/Cargo.toml
+++ b/src/api/Cargo.toml
@@ -27,6 +27,7 @@ openssl-sys = { workspace = true }
 rust-embed = { workspace = true }
 semver = { workspace = true }
 spow = { workspace = true }
+serde = { workspace = true }
 serde_json = { workspace = true }
 serde_urlencoded = { workspace = true }
 time = { workspace = true }
@@ -35,4 +36,3 @@ tokio = { workspace = true }
 utoipa = { workspace = true }
 utoipa-swagger-ui = { workspace = true }
 validator = { workspace = true }
-serde = { version = "1.0.219", features = ["derive"] }
