re-design DB layout + PAM API to provide more flexibility + impl `getent` for hosts

--- a/config.toml
+++ b/config.toml
@@ -428,7 +428,7 @@ nodes = [
 #
 # default: false
 # overwritten by: HQL_LOG_STATEMENTS
-log_statements = false
+log_statements = true
 
 # The size of the internal cache for prepared statements.
 #
