save `PamRemotePassword` hashed

--- a/src/common/Cargo.toml
+++ b/src/common/Cargo.toml
@@ -24,6 +24,7 @@ rand = { workspace = true }
 rand_core = { workspace = true }
 regex = { workspace = true }
 reqwest = { workspace = true }
+ring = { workspace = true }
 serde = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
