--- a/config.toml
+++ b/config.toml
@@ -428,7 +428,7 @@ nodes = [
 #
 # default: false
 # overwritten by: HQL_LOG_STATEMENTS
-log_statements = false
+log_statements = true
 
 # The size of the internal cache for prepared statements.
 #
@@ -1623,7 +1623,7 @@ session_lifetime = 43200
 #
 # default: false
 # overwritten by: SESSION_RENEW_MFA
-session_renew_mfa = true
+#session_renew_mfa = true
 
 # Session timeout in seconds. When a new token / login is requested
 # before this timeout hits the limit, the user will be authenticated
@@ -1715,6 +1715,26 @@ level_database = 'info'
 # default: true
 # overwritten by: ADMIN_FORCE_MFA
 admin_force_mfa = false
+
+[pam]
+# The length of newly generated PAM remote passwords via the
+# account dashboard. The default is fine as long as you can copy
+# & paste them. You may want to reduce the length here if you e.g.
+# occasionally generate them on mobile and need to type them
+# manually into some terminal.
+#
+# default: 24
+# overwritten by: PAM_REMOTE_PASSWORD_LEN
+remote_password_len = 24
+
+# The TTL for newly generated PAM remote passwords in seconds.
+# The default gives you plenty of time to open a few sessions in
+# some terminals and maybe switch to `root` on some remote machines,
+# while still expiring quick enough to be secure.
+#
+# default: 120
+# overwritten by: PAM_REMOTE_PASSWORD_TTL
+remote_password_ttl = 120
 
 [pow]
 # The difficulty for a Proof-of-Work (PoW).
