--- a/src/api/Cargo.toml
+++ b/src/api/Cargo.toml
@@ -27,6 +27,7 @@ openssl-sys = { workspace = true }
 rust-embed = { workspace = true }
 semver = { workspace = true }
 spow = { workspace = true }
+serde = { workspace = true }
 serde_json = { workspace = true }
 serde_urlencoded = { workspace = true }
 time = { workspace = true }
