--- a/config.toml
+++ b/config.toml
@@ -1002,6 +1002,13 @@ smtp_url = 'localhost'
 # overwritten by: SMTP_CONNECT_RETRIES
 connect_retries = 3
 
+# Can be set to `true` to skip trying a real TLS connection
+# via SMTP and use STARTTLS directly.
+#
+# default: false
+# overwritten by: SMTP_STARTTLS_ONLY
+starttls_only = true
+
 # You can set this to `true` to allow an unencrypted and
 # unauthenticated SMTP connection to an SMTP relay on your localhost
 # or for development purposes.
