allow build cross-compile pkg config

--- a/Dockerfile_builder
+++ b/Dockerfile_builder
@@ -4,6 +4,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 ENV CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_LINKER=x86_64-linux-gnu-gcc
 ENV CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc
+ENV PKG_CONFIG_ALLOW_CROSS=1
 
 RUN <<EOF
 #!/bin/bash
@@ -25,3 +26,4 @@ EOF
 WORKDIR /work
 
 CMD ["/bin/bash"]
+
