--- a/config.toml
+++ b/config.toml
@@ -966,17 +966,21 @@ smtp_url = 'localhost'
 # overwritten by: SMTP_FROM
 #smtp_from = 'Rauthy <rauthy@localhost>'
 
-# Can be set to 'true' to enable `XOAUTH2` as authntication
-# mechanism when opening SMTP connections. If set, you must
-# provide all `xoauth_*` values below. Rauthy will then do
-# a `client_credentials` request to fetch an access token.
+# You usually do not need to change this value. The 'default'
+# will connect via SMTP PLAIN or LOGIN, which works in almost
+# all scenarios. However, you can change it to `xoauth2` to
+# connect via XOAUTH2. In addition, there is also `microsoft_graph`.
+# It is a custom implementaion that does not use SMTP anymore,
+# but instead the Microsoft Azure Graph API. You should not use
+# it, unless you have no other choice or a very good reason.
 #
-# You only need to provide the `smtp_username` and no
-# `smtp_password` in this case.
+# If you specify another value than ´default`, you must provide
+# all the additional `x_oauth_*` values bwloe.
 #
-# default: false
-# overwritten by: SMTP_AUTH_XOAUTH2
-#auth_xoauth2 = false
+# possible values: 'default', 'xoauth2', 'microsoft_graph'
+# default: 'default'
+# overwritten by: SMTP_CONN_MODE
+smtp_conn_mode = 'default'
 
 # These values must be given if `auth_xoauth2 = true`.
 # They will be used for a `client_credentials` request
