--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = ["src/*"]
 exclude = ["rauthy-client"]
 
 [workspace.package]
-version = "0.32.0-20250805"
+version = "0.32.0"
 edition = "2024"
 authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
 license = "Apache-2.0"
@@ -26,10 +26,8 @@ lto = false
 strip = false
 
 [patch.crates-io]
-#cryptr = { git = "https://github.com/sebadob/cryptr.git" }
-#hiqlite = { path = "../hiqlite/hiqlite", package = "hiqlite" }
-hiqlite = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite" }
-hiqlite-macros = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite-macros" }
+#hiqlite = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite" }
+#hiqlite-macros = { git = "https://github.com/sebadob/hiqlite.git", package = "hiqlite-macros" }
 
 [workspace.dependencies]
 accept-language = "3"
@@ -67,10 +65,10 @@ futures-util = "0.3"
 gethostname = "1"
 hex = { version = "0.4", features = ["serde"] }
 hickory-resolver = "0.25.2"
-hiqlite = { version = "0.9.1", features = [
+hiqlite = { version = "0.10", features = [
     "cache", "counters", "dashboard", "listen_notify_local", "webpki-roots"
 ] }
-hiqlite-macros = { version = "0.9" }
+hiqlite-macros = { version = "0.10" }
 hmac-sha256 = { version = "1.1.7", features = ["traits010"] }
 hmac-sha512 = { version = "1.1.5", features = ["traits010", "sha384"] }
 image = { version = "0.25.1", default-features = false, features = [
