--- a/src/bin/Cargo.toml
+++ b/src/bin/Cargo.toml
@@ -28,6 +28,7 @@ num_cpus = { workspace = true }
 openssl = { workspace = true }
 openssl-sys = { workspace = true }
 prometheus = { workspace = true }
+rcgen = { workspace = true }
 regex = { workspace = true }
 reqwest = { workspace = true }
 rustls = { workspace = true }
@@ -35,6 +36,7 @@ rustls-pki-types = { workspace = true }
 rustls-pemfile = { workspace = true }
 serde_json = { workspace = true }
 spow = { workspace = true }
+time = { workspace = true }
 tls-hot-reload = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
