--- a/Cargo.toml
+++ b/Cargo.toml
@@ -128,7 +128,7 @@ tokio = { version = "1", features = ["full"] }
 tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
 tokio-postgres-rustls = { version = "0.13", features = [] }
 utoipa = { version = "5", features = ["actix_extras", "chrono", "openapi_extensions"] }
-utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }
+utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web", "vendored"] }
 validator = { version = "0.20.0", features = ["derive"] }
 webauthn-rs = { version = "0.5", features = [
     "danger-allow-state-serialisation", "danger-credential-internals"
