--- a/charts/rauthy/templates/servicemonitor.yaml
+++ b/charts/rauthy/templates/servicemonitor.yaml
@@ -3,13 +3,16 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: {{ include "rauthy.fullname" . }}-servicemonitor
+  namespace: {{ .Values.serviceMonitor.namespaceOverride | default .Release.Namespace }}
   labels:
-    app: {{ include "rauthy.name" . }}
-    release: {{ .Release.Name }}
+    {{- include "rauthy.labels" . | nindent 4 }}
 spec:
   selector:
     matchLabels:
-      app: {{ include "rauthy.name" . }}
+      {{- include "rauthy.selectorLabels" . | nindent 6 }}
+  namespaceSelector:
+    matchNames:
+      - {{ .Release.Namespace }}
   endpoints:
   - port: {{ .Values.serviceMonitor.port }}
     interval: {{ .Values.serviceMonitor.interval }}
