--- a/charts/rauthy/templates/httproute.yaml
+++ b/charts/rauthy/templates/httproute.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.httpRoute.enabled -}}
 {{- $fullName := include "rauthy.fullname" . -}}
-{{- $svcPort := .Values.ports.http -}}
+{{- $svcPort := .Values.service.port -}}
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
