--- a/charts/rauthy/templates/secret.yaml
+++ b/charts/rauthy/templates/secret.yaml
@@ -9,13 +9,15 @@ type: Opaque
 stringData:
   config.toml: |-
     [server]
-    scheme = {{ include "rauthy.apiScheme" . | quote }}
+    scheme = {{ .Values.service.scheme | quote }}
     pub_url = {{ include "rauthy.domainName" . | quote }}
+    {{- if eq .Values.service.type "ClusterIP" }}
     proxy_mode = true
-    trusted_proxies = ["10.0.0.0/8"]
-    {{- if and .Values.ports.metrics .Values.serviceMonitor.enabled }}
+    trusted_proxies = ["10.0.0.0/8", "192.168.0.0/24", "172.16.0.0/12"]
+    {{- end}}
+    {{- if .Values.metrics.enabled }}
     metrics_enable = true
-    metrics_port = {{ int .Values.ports.metrics }}
+    metrics_port = {{ int .Values.metrics.port }}
     {{- end }}
 
     [cluster]
@@ -25,12 +27,12 @@ stringData:
     {{- if gt (int .Values.replicaCount) 1 }}
     nodes = [
       {{- range $i, $ := until (int $root.Values.replicaCount) }}
-        "{{ add $i 1 }} {{ $root.Release.Name }}-{{ $i }}.{{ $headless }}:{{ $root.Values.ports.raft }} {{ $root.Release.Name }}-{{ $i }}.{{ $headless }}:{{ $root.Values.ports.api }}",
+        "{{ add $i 1 }} {{ $root.Release.Name }}-{{ $i }}.{{ $headless }}:{{ $root.Values.headlessService.ports.raft }} {{ $root.Release.Name }}-{{ $i }}.{{ $headless }}:{{ $root.Values.headlessService.ports.api }}",
       {{- end }}
     ]
     {{- else }}
     nodes = [
-        "1 localhost:{{ $root.Values.ports.raft }} localhost:{{ $root.Values.ports.api }}"
+        "1 localhost:{{ $root.Values.headlessService.ports.raft }} localhost:{{ $root.Values.headlessService.ports.api }}"
     ]
     log_sync = "immediate"
     {{- end }}
