--- a/charts/rauthy/templates/service.yaml
+++ b/charts/rauthy/templates/service.yaml
@@ -2,51 +2,24 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "rauthy.fullname" . }}
+  {{ with .Values.service.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   labels:
     {{- include "rauthy.labels" . | nindent 4 }}
 spec:
-  type: ClusterIP
-  selector:
-    {{- include "rauthy.selectorLabels" . | nindent 4 }}
+  type: {{ .Values.service.type }}
   ports:
-  {{- if .Values.ports.http }}
-    - name: http
-      port: {{ .Values.ports.http }}
-      targetPort: http
+    - port: {{ .Values.service.port }}
+      targetPort: {{ .Values.service.scheme }}
       protocol: TCP
-  {{- end }}
-  {{- if .Values.ports.https }}
-    - name: https
-      port: {{ .Values.ports.https }}
-      targetPort: https
-      protocol: TCP
-  {{- end }}
-  {{- if and .Values.ports.metrics .Values.serviceMonitor.enabled }}
-    - name: metrics
-      port: {{ .Values.ports.metrics }}
+      name: {{ .Values.service.scheme }}
+    {{- if .Values.metrics.enabled }}
+    - port: {{ .Values.metrics.port }}
       targetPort: metrics
       protocol: TCP
-  {{- end }}
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{ include "rauthy.fullname" . }}-headless
-  labels:
-    {{- include "rauthy.labels" . | nindent 4 }}
-spec:
-  type: ClusterIP
-  clusterIP: None
-  publishNotReadyAddresses: true
-  sessionAffinity: None
+      name: metrics
+    {{- end }}
   selector:
     {{- include "rauthy.selectorLabels" . | nindent 4 }}
-  ports:
-    - name: raft
-      protocol: TCP
-      port: {{ .Values.ports.raft }}
-      targetPort: raft
-    - name: api
-      protocol: TCP
-      port: {{ .Values.ports.api }}
-      targetPort: api
