--- a/charts/rauthy/templates/secret.yaml
+++ b/charts/rauthy/templates/secret.yaml
@@ -3,6 +3,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "rauthy.fullname" . }}-config
+  annotations:
+    helm.sh/resource-policy: keep
   labels:
     {{- include "rauthy.labels" . | nindent 4 }}
 type: Opaque
