introduce `[user_values]` + `[user_values.preferred_username]` in config and parse values properly

--- a/src/data/Cargo.toml
+++ b/src/data/Cargo.toml
@@ -88,6 +88,7 @@ refinery = { workspace = true }
 tokio-postgres = { workspace = true }
 tokio-postgres-rustls = { workspace = true }
 webpki-roots = { workspace = true }
+regex = "1.11.3"
 
 [dev-dependencies]
 pretty_assertions = "1"
