--- a/config.toml
+++ b/config.toml
@@ -2199,6 +2199,85 @@ enable = true
 # overwritten by: USER_REG_OPEN_REDIRECT
 #allow_open_redirect = false
 
+[user_values]
+
+# In this section, you can configure the requirements for different
+# user values to adjust them to your needs. The `preferred_username`
+# as a special value provide some additional options.
+# The `email` is and always will be mandatory.
+#
+# You can set one of the following values:
+# - required
+# - optional
+# - hidden
+
+# default: 'required'
+given_name = 'required'
+# default: 'optional'
+family_name = 'optional'
+# default: 'optional'
+birthdate = 'optional'
+# default: 'optional'
+street = 'optional'
+# default: 'optional'
+zip = 'optional'
+# default: 'optional'
+city = 'optional'
+# default: 'optional'
+country = 'optional'
+# default: 'optional'
+phone = 'optional'
+# default: 'optional'
+tz = 'optional'
+
+[user_values.preferred_username]
+
+# If the `preferred_username` is not set for a given user, the
+# `email` will be used as a fallback. This can happen, if it is
+# not set to `required`, or if you had it optional before and
+# then changed it, while the user may have not updated it yet
+# according to the new policy.
+#
+# one of: required, optional, hidden
+# default: 'optional'
+preferred_username = 'optional'
+
+# The `preferred_username` is an unstable claim by the OIDC RFC.
+# This means it MUST NOT be trusted to be unique, be a stable
+# map / uid for a user, or anything like that. It is "just
+# another value" and should be treated like that.
+#
+# However, `preferred_username`s from Rauthy will always be
+# guaranteed to be unique. You can define if these usernames
+# are immutable once they are set, which is the default, or if
+# users can change them freely at any time.
+#
+# default: true
+immutable = true
+
+# TODO a blacklist feature could be a nice addition after
+#  either a change or a user deletion with immutable names.
+
+# You can define the validation regex / pattern.
+#
+# You need to escape special characters for the `pattern_html`
+# as it will be sent to the frontend as a String value
+# dynamically. It must be formatted in a way, that it will
+# work as a
+# [`pattern` attribute](https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Attributes/pattern)
+# after the conversion. If you are unsure if it works, check
+# your developer tools console. You will see an error log
+# if the conversion fails. You can also find some examples
+# for these escaped pattern Strings in the
+# [patterns.ts](https://github.com/sebadob/rauthy/blob/main/frontend/src/utils/patterns.ts).
+# NOTE: These are NOT Javascript regexes!
+#
+# By default, the validation matches the Linux username regex,
+# but you may want to increase the minimum characters for
+# instance.
+regex_rust = '^[a-zA-Z0-9][a-zA-Z0-9-.]*[a-zA-Z0-9]$'
+pattern_html = '^[a-z][a-z0-9_\\-]{1,61}$'
+
 [webauthn]
 # The 'Relaying Party (RP) ID' - effective domain name.
 #
