--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ brotli = "8"
 bytes = "1.10"
 chacha20poly1305 = { version = "0.10", features = ["std"] }
 chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
+chrono-tz = "0.10.4"
 cidr = "0.3.0"
 constant_time_eq = "0.4.2"
 cron = "0.15"
