--- a/config.toml
+++ b/config.toml
@@ -2240,7 +2240,7 @@ tz = 'optional'
 #
 # one of: required, optional, hidden
 # default: 'optional'
-preferred_username = 'optional'
+preferred_username = 'required'
 
 # The `preferred_username` is an unstable claim by the OIDC RFC.
 # This means it MUST NOT be trusted to be unique, be a stable
@@ -2260,23 +2260,20 @@ immutable = true
 
 # You can define the validation regex / pattern.
 #
-# You need to escape special characters for the `pattern_html`
-# as it will be sent to the frontend as a String value
-# dynamically. It must be formatted in a way, that it will
-# work as a
+# The `pattern_html` it will be sent to the frontend as a
+# String value dynamically. It must be formatted in a way,
+# that it will work as a
 # [`pattern` attribute](https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Attributes/pattern)
 # after the conversion. If you are unsure if it works, check
 # your developer tools console. You will see an error log
-# if the conversion fails. You can also find some examples
-# for these escaped pattern Strings in the
-# [patterns.ts](https://github.com/sebadob/rauthy/blob/main/frontend/src/utils/patterns.ts).
+# if the conversion fails.
 # NOTE: These are NOT Javascript regexes!
 #
 # By default, the validation matches the Linux username regex,
 # but you may want to increase the minimum characters for
 # instance.
 regex_rust = '^[a-zA-Z0-9][a-zA-Z0-9-.]*[a-zA-Z0-9]$'
-pattern_html = '^[a-z][a-z0-9_\\-]{1,61}$'
+pattern_html = '^[a-z][a-z0-9_\-]{1,61}$'
 
 [webauthn]
 # The 'Relaying Party (RP) ID' - effective domain name.
